# ADRA

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
adra/: __init__.py  config.py  critic.py  judge.py  llm.py  nodes.py  orchestrator.py  provenance.py  rubric.py  state.py  utils.py
adra/clients/synthetic/northwind/: README.md  ci-standards.md  conventions.md  glossary.md
adra/clients/synthetic/northwind/adr/: ADR-0001-deterministic-grounding.md  ADR-0002-no-stale-base-merges.md  ADR-0003-bundle-resources-stay-yml.md  ADR-0004-test-discovery.md  ADR-0005-experiments-on-warehouse.md  ADR-0006-docs-from-provenance.md  ADR-0007-decision-support-framing.md  ADR-0008-minimum-functional.md
adra/clients/synthetic/northwind/cases/: CASE-2024-031-stale-base-destructive-merge.md  CASE-2024-047-coverage-no-data.md  CASE-2024-052-premature-no-access.md  CASE-2024-058-anomaly-verified-live.md  CASE-2024-061-route-blast-radius.md
adra/connectors/: __init__.py  azure.py  azure_devops.py  base.py  databricks.py  emulator.py  github.py
adra/prompts/: code_review.md  critic.md  decide.md  document.md  experiment.md  improve.md  judge.md  pr_eval.md
adra/skills/: __init__.py  base.py  code_review.py  decide.py  document.py  experiment.py  improve.py  pr_eval.py
adra/tools/: __init__.py  bundle_tools.py  ci_tools.py  discovery_tools.py  git_tools.py  lang_tools.py  sql_tools.py
cli/: __init__.py  __main__.py
docs/: README.md  architecture.md  capabilities.md  design.md  governance.md  operations.md
docs/_diagrams/: build.py  components.py  figures.py  icons.py  svg_lib.py  theme.py
docs/adr/: ADR-0001-deterministic-first-grounding.md  ADR-0002-hand-rolled-orchestrator.md  ADR-0003-owned-chatmodel-seam.md  ADR-0004-shared-typed-rubric.md  ADR-0005-blocking-critic-and-escalation.md  ADR-0006-immutable-provenance.md  ADR-0007-client-agnostic-grounding.md  ADR-0008-connector-protocol-and-emulator.md  ADR-0009-two-repo-split-and-secrets.md  README.md
docs/architecture/: 01_overview.md  02_layered-design.md  03_data-flow.md  04_run-sequence.md  05_why-deterministic-first.md  architecture.md
docs/data-contract/: 01_intake-contracts.md  02_connector-shapes.md  03_run-record.md  04_missing-and-outlier-data.md  data-contract.md
docs/frameworks/: frameworks.md
docs/frameworks/01_pydantic-ai/: 01_pydantic-ai.md  01_what-it-is.md  02_why.md  03_usage-and-gotchas.md
docs/frameworks/02_httpx/: 01_github.md  02_azure-devops.md  02_httpx.md
docs/frameworks/03_databricks-sdk/: 01_usage-and-safety.md  03_databricks-sdk.md
docs/frameworks/04_azure-identity-monitor/: 01_usage-and-gotchas.md  04_azure-identity-monitor.md
docs/frameworks/05_stdlib-emulator/: 01_the-emulator.md  05_stdlib-emulator.md
docs/guides/: 01_install-and-run.md  02_the-cli.md  03_multi-provider-routing.md  04_retarget-a-client.md  05_local-scripts.md  guides.md
docs/methodologies/: 01_adversarial-spine.md  02_llm-as-judge.md  03_shared-rubric.md  04_deterministic-first.md  05_human-escalation.md  methodologies.md
docs/security/: 01_read-only-default.md  02_gated-writes.md  03_untrusted-content.md  04_secret-handling.md  security.md
docs/use-cases/: 01_code-review.md  02_pr-eval.md  03_experiment.md  04_improve.md  05_document.md  06_decide.md  use-cases.md
examples/: stale_base_pr.json
refs/: README.md  references.bib
scripts/: demo.ps1  demo.sh  demo_offline.py  run_decide.py  run_experiment.py  run_pr_eval.py  run_review.py  setup.ps1  setup.sh  test.ps1  test.sh
tests/: test_adversarial_loop.py  test_connectors_platform.py
