[project]
name = "adra"
version = "0.3.0"
description = "ADRA — Adversarial Dev Review Agent: a deterministic-first, adversarial-validation engine for the software lifecycle (PR review, validation/refutation experiments, auto-docs, human escalation)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
keywords = ["llm", "agent", "code-review", "adversarial-validation", "llm-as-judge", "devops", "provenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
# The engine core has NO required third-party dependencies: it runs offline on the
# Python standard library via the deterministic `mock` provider. Real providers and
# platform connectors are opt-in extras below.
dependencies = []

[project.optional-dependencies]
# House standard for the LLM layer (ADR-0007 lane-c, ADR-0053): pydantic-ai (+ its provider
# extras) — multi-provider/agnostic, provider:model strings. The OpenAI-compatible long tail
# (xai/deepseek/openrouter/together/ollama) rides the openai extra's base-url support.
llm = ["pydantic-ai-slim[anthropic,groq,openai,google]>=1,<2"]
github = ["httpx>=0.27"]                              # real GitHub connector (REST v3)
azuredevops = ["httpx>=0.27"]                         # Azure DevOps connector (REST 7.1)
databricks = ["databricks-sdk>=0.30"]                 # Databricks SQL Statement Execution
azure = ["azure-identity>=1.17", "azure-monitor-query>=1.3"]  # Azure Log Analytics (KQL)
all = [
    "pydantic-ai-slim[anthropic,groq,openai,google]>=1,<2",
    "httpx>=0.27",
    "databricks-sdk>=0.30",
    "azure-identity>=1.17",
    "azure-monitor-query>=1.3",
]
dev = [
    "pytest>=8.0", "ruff>=0.6", "httpx>=0.27",
    "pydantic-ai-slim[anthropic]>=1,<2",
    "databricks-sdk>=0.30",
    "azure-identity>=1.17", "azure-monitor-query>=1.3",
]

[project.scripts]
adra = "cli.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["adra*", "cli*"]

[tool.setuptools.package-data]
adra = ["prompts/*.md", "clients/synthetic/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
